--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -1,5 +1,5 @@
 .cabecalho {
-    color: #FFF;
+    color: var(--branco);
 
     width: 100%;
 
@@ -12,7 +12,7 @@
     padding-top: .75rem;
     padding-bottom: .75rem;
 
-    border-bottom: 1px solid #103D4A;
+    border-bottom: 1px solid var(--borda-cabecalho-mobile);
 
     position: absolute;
 }
@@ -27,10 +27,6 @@
 
 .cabecalho__link {
     font-size: 1.1rem;
-
     display: inline-block;
-
-    margin-right: .7rem;
-    margin-bottom: 1.25rem;
-    margin-left: .7rem;
+    margin: 0 .7rem 1.25rem .7rem;
 }
