--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,4 @@
-.root {
+:root {
 --branco: #FFF;
 --azul-claro: #DFE3E5;
 --vermelho-forte: #B72E2E;
@@ -16,7 +16,6 @@
 --planos-cartao-ultra: #B04CD9;
 --planos-cartao-mega: #E33B3B;
 
-
 }
 
 body {
@@ -26,4 +25,15 @@ body {
 .container {
     padding-left: 6%;
     padding-right: 6%;
+}
+
+.botao {
+    text-align: center;
+    display: block;
+    width: 100%;
+    max-width: 350px;
+    box-sizing: border-box;
+    padding: 1rem 2rem;
+    border: 1px solid var(--branco);
+    border-radius: 5px;
 }
