--- a/css/chamada.css
+++ b/css/chamada.css
@@ -17,7 +17,7 @@
     font-size: 2rem;
     font-weight: 700;
     text-transform: uppercase;
-
+    margin-top: 2rem;
     margin-bottom: 1.5rem;
 }
 
@@ -30,4 +30,10 @@
 
 .chamada__botao {
     width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .chamada__titulo {
+        max-width: 600px;
+    }
 }
