--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -30,3 +30,11 @@
     display: inline-block;
     margin: 0 .7rem 1.25rem .7rem;
 }
+
+@media screen and (min-width: 1024px) {
+    .cabecalho {
+        flex-direction: row;
+        justify-content: space-between;
+        border: none;
+    }
+}
