--- a/css/sobre.css
+++ b/css/sobre.css
@@ -32,3 +32,20 @@
 
     margin-bottom: 1rem;
 }
+
+@media screen and (min-width: 1024px) {
+    .sobre__conteudo {
+        display: block;
+        margin: auto;
+        width: 800px;
+        text-align: center;
+    }
+
+    .sobre__texto {
+        margin-top: 30px;
+    }
+
+    .sobre__plataformas {
+        margin-top: 30px;
+    }
+}
